# Cloud-and-Shadow-Masking

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
src/cloudmasking/: cli.py  env.py  metrics.py  predict.py  prepare.py  train.py  utils.py
src/cloudmasking.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cloudmasking/models/: __init__.py  unet.py
